--- a/SimpleFTP/DeployMaster.csproj
+++ b/SimpleFTP/DeployMaster.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{920C4B9E-10E1-4619-9343-7F508B70B0AE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>SimpleFTP</RootNamespace>
-    <AssemblyName>SimpleFTP</AssemblyName>
+    <RootNamespace>DeployMaster</RootNamespace>
+    <AssemblyName>DeployMaster</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -55,6 +55,9 @@
   <PropertyGroup>
     <StartupObject />
   </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -83,9 +86,7 @@
     <Compile Include="ConnectionProfile.cs" />
     <Compile Include="ConnectionManager.cs" />
     <Compile Include="FileObject.cs" />
-    <Compile Include="Telnet.cs" />
     <Compile Include="TelnetClient.cs" />
-    <Compile Include="Verbs.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainWindow.xaml.cs">
